# lab_work3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: BandMatrix.hpp  Complex.h  Complex.hpp  Complex_io.h  Complex_io.hpp  DiagonalMatrix.h  DiagonalMatrix.hpp  DiagonalMatrix_io.h  DiagonalMatrix_io.hpp  Generators.hpp  IMatrix.h  IMatrix.hpp  Matrices_io.hpp  Matrix.h  Matrix.hpp  Matrix_io.h  Matrix_io.hpp  Matrix_operators.hpp  SLAE.hpp  SparseMatrix.h  SparseMatrix.hpp  SparseMatrix_io.h  SparseMatrix_io.hpp  SquareMatrix.h  SquareMatrix.hpp  TriangularMatrix.h  TriangularMatrix.hpp  TriangularMatrix_io.hpp  Vector.hpp  vector.hpp
src/lab2_files/: ArraySequence.h  DynamicArray.h  ListSequence.hpp
tests/: BandMatrix_tests.cpp  Complex_tests.cpp  DiagonalMatrix_tests.cpp  RectangularMatrix.cpp  SLAE_tests.cpp  SparseMatrix_tests.cpp  SquareMatrix_tests.cpp  TriangularMatrix_tests.cpp  Vector_tests.cpp
